tests/fail/undefined_type_for_alias.tig
let
        type g = h
        type h = non_defined
in
        2
end
